# TinyMesh-M2

./: AppTinyMesh.sln  CMakeLists.txt
AppTinyMesh/: AppTinyMesh.vcxproj  AppTinyMesh.vcxproj.filters
AppTinyMesh/Include/: Bezier.h  Deformation.h  Node.h  Primitives.h  box.h  camera.h  color.h  mathematics.h  mesh.h  meshcolor.h  qte.h  ray.h  realtime.h  shader-api.h
AppTinyMesh/Shaders/: mesh.glsl  skybox.glsl
AppTinyMesh/Source/: Bezier.cpp  Deformation.cpp  Node.cpp  Primitives.cpp  box.cpp  camera.cpp  evector.cpp  interface.ui  main.cpp  mesh-widget.cpp  mesh.cpp  meshcolor.cpp  qtemainwindow.cpp  triangle.cpp
